Remove dependency on sun.security.x509